vlc-java/src/main/java/com/tek/vlc/jna/LibvlcLibrary.java

    /**
     * Sets the application name. LibVLC passes this as the user agent string<br>
     * when a protocol requires it.<br>
     * \param p_instance LibVLC instance<br>
     * \param name human-readable application name, e.g. "FooBar player 1.2.3"<br>
     * \param http HTTP User Agent, e.g. "FooBar/1.2.3 Python/2.6.0"<br>
     * \version LibVLC 1.1.1 or later<br>
     * Original signature : <code>void libvlc_set_user_agent(libvlc_instance_t*, const char*, const char*)</code><br>
     * <i>native declaration : line 283</i>
     */
    void libvlc_set_user_agent(PointerByReference p_instance, Pointer name, Pointer http);
    /**
     * Sets some meta-information about the application.<br>
     * See also libvlc_set_user_agent().<br>
     * \param p_instance LibVLC instance<br>
     * \param id Java-style application identifier, e.g. "com.acme.foobar"<br>
     * \param version application version numbers, e.g. "1.2.3"<br>
     * \param icon application icon name, e.g. "foobar"<br>
     * \version LibVLC 2.1.0 or later.<br>
     * Original signature : <code>void libvlc_set_app_id(libvlc_instance_t*, const char*, const char*, const char*)</code><br>
     * <i>native declaration : line 297</i><br>
     * @deprecated use the safer methods {@link #libvlc_set_app_id(com.sun.jna.ptr.PointerByReference, java.lang.String, java.lang.String, java.lang.String)} and {@link #libvlc_set_app_id(com.sun.jna.ptr.PointerByReference, com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
     */
    @Deprecated 
    void libvlc_set_app_id(Pointer p_instance, Pointer id, Pointer version, Pointer icon);
    /**
     * Sets some meta-information about the application.<br>
     * See also libvlc_set_user_agent().<br>
     * \param p_instance LibVLC instance<br>
     * \param id Java-style application identifier, e.g. "com.acme.foobar"<br>
     * \param version application version numbers, e.g. "1.2.3"<br>
     * \param icon application icon name, e.g. "foobar"<br>
     * \version LibVLC 2.1.0 or later.<br>
     * Original signature : <code>void libvlc_set_app_id(libvlc_instance_t*, const char*, const char*, const char*)</code><br>
     * <i>native declaration : line 297</i>
     */
    void libvlc_set_app_id(PointerByReference p_instance, String id, String version, String icon);
    /**
     * Sets some meta-information about the application.<br>
     * See also libvlc_set_user_agent().<br>
     * \param p_instance LibVLC instance<br>
     * \param id Java-style application identifier, e.g. "com.acme.foobar"<br>
     * \param version application version numbers, e.g. "1.2.3"<br>
     * \param icon application icon name, e.g. "foobar"<br>
     * \version LibVLC 2.1.0 or later.<br>
     * Original signature : <code>void libvlc_set_app_id(libvlc_instance_t*, const char*, const char*, const char*)</code><br>
     * <i>native declaration : line 297</i>
     */
    void libvlc_set_app_id(PointerByReference p_instance, Pointer id, Pointer version, Pointer icon);
    /**
     * Retrieve libvlc version.<br>
     * Example: "1.1.0-git The Luggage"<br>
     * \return a string containing the libvlc version<br>
     * Original signature : <code>char* libvlc_get_version()</code><br>
     * <i>native declaration : line 307</i>
     */
    Pointer libvlc_get_version();
    /**
     * Retrieve libvlc compiler version.<br>
     * Example: "gcc version 4.2.3 (Ubuntu 4.2.3-2ubuntu6)"<br>
     * \return a string containing the libvlc compiler version<br>
     * Original signature : <code>char* libvlc_get_compiler()</code><br>
     * <i>native declaration : line 316</i>
     */
    Pointer libvlc_get_compiler();
    /**
     * Retrieve libvlc changeset.<br>
     * Example: "aa9bce0bc4"<br>
     * \return a string containing the libvlc changeset<br>
     * Original signature : <code>char* libvlc_get_changeset()</code><br>
     * <i>native declaration : line 325</i>
     */
    Pointer libvlc_get_changeset();
    /**
     * Frees an heap allocation returned by a LibVLC function.<br>
     * If you know you're using the same underlying C run-time as the LibVLC<br>
     * implementation, then you can call ANSI C free() directly instead.<br>
     * \param ptr the pointer<br>
     * Original signature : <code>void libvlc_free(void*)</code><br>
     * <i>native declaration : line 334</i>
     */
    void libvlc_free(Pointer ptr);
    /**
     * Register for an event notification.<br>
     * \param p_event_manager the event manager to which you want to attach to.<br>
     *        Generally it is obtained by vlc_my_object_event_manager() where<br>
     *        my_object is the object you want to listen to.<br>
     * \param i_event_type the desired event to which we want to listen<br>
     * \param f_callback the function to call when i_event_type occurs<br>
     * \param user_data user provided data to carry with the event<br>
     * \return 0 on success, ENOMEM on error<br>
     * Original signature : <code>int libvlc_event_attach(libvlc_event_manager_t*, libvlc_event_type_t, libvlc_callback_t, void*)</code><br>
     * <i>native declaration : line 377</i><br>
     * @deprecated use the safer method {@link #libvlc_event_attach(com.sun.jna.ptr.PointerByReference, int, libvlc.LibvlcLibrary.libvlc_callback_t, com.sun.jna.Pointer)} instead
     */
    @Deprecated 
    int libvlc_event_attach(Pointer p_event_manager, int i_event_type, LibvlcLibrary.libvlc_callback_t f_callback, Pointer user_data);
    /**
     * Register for an event notification.<br>
     * \param p_event_manager the event manager to which you want to attach to.<br>
     *        Generally it is obtained by vlc_my_object_event_manager() where<br>
     *        my_object is the object you want to listen to.<br>
     * \param i_event_type the desired event to which we want to listen<br>
     * \param f_callback the function to call when i_event_type occurs<br>
     * \param user_data user provided data to carry with the event<br>
     * \return 0 on success, ENOMEM on error<br>
     * Original signature : <code>int libvlc_event_attach(libvlc_event_manager_t*, libvlc_event_type_t, libvlc_callback_t, void*)</code><br>
     * <i>native declaration : line 377</i>
     */
    int libvlc_event_attach(PointerByReference p_event_manager, int i_event_type, LibvlcLibrary.libvlc_callback_t f_callback, Pointer user_data);
    /**
     * Unregister an event notification.<br>
     * \param p_event_manager the event manager<br>
     * \param i_event_type the desired event to which we want to unregister<br>
     * \param f_callback the function to call when i_event_type occurs<br>
     * \param p_user_data user provided data to carry with the event<br>
     * Original signature : <code>void libvlc_event_detach(libvlc_event_manager_t*, libvlc_event_type_t, libvlc_callback_t, void*)</code><br>
     * <i>native declaration : line 390</i><br>
     * @deprecated use the safer method {@link #libvlc_event_detach(com.sun.jna.ptr.PointerByReference, int, libvlc.LibvlcLibrary.libvlc_callback_t, com.sun.jna.Pointer)} instead
     */
    @Deprecated 
    void libvlc_event_detach(Pointer p_event_manager, int i_event_type, LibvlcLibrary.libvlc_callback_t f_callback, Pointer p_user_data);
    /**
     * Unregister an event notification.<br>
     * \param p_event_manager the event manager<br>
     * \param i_event_type the desired event to which we want to unregister<br>
     * \param f_callback the function to call when i_event_type occurs<br>
     * \param p_user_data user provided data to carry with the event<br>
     * Original signature : <code>void libvlc_event_detach(libvlc_event_manager_t*, libvlc_event_type_t, libvlc_callback_t, void*)</code><br>
     * <i>native declaration : line 390</i>
     */
    void libvlc_event_detach(PointerByReference p_event_manager, int i_event_type, LibvlcLibrary.libvlc_callback_t f_callback, Pointer p_user_data);
    /**
     * Get an event's type name.<br>
     * \param event_type the desired event<br>
     * Original signature : <code>char* libvlc_event_type_name(libvlc_event_type_t)</code><br>
     * <i>native declaration : line 400</i>
     */
    Pointer libvlc_event_type_name(int event_type);
    /**
     * Gets debugging information about a log message: the name of the VLC module<br>
     * emitting the message and the message location within the source code.<br>
     * The returned module name and file name will be NULL if unknown.<br>
     * The returned line number will similarly be zero if unknown.<br>
     * \param ctx message context (as passed to the @ref libvlc_log_cb callback)<br>
     * \param module module name storage (or NULL) [OUT]<br>
     * \param file source code file name storage (or NULL) [OUT]<br>
     * \param line source code file line number storage (or NULL) [OUT]<br>
     * \warning The returned module name and source code file name, if non-NULL,<br>
     * are only valid until the logging callback returns.<br>
     * \version LibVLC 2.1.0 or later<br>
     * Original signature : <code>void libvlc_log_get_context(const libvlc_log_t*, const char**, const char**, unsigned*)</code><br>
     * <i>native declaration : line 440</i><br>
     * @deprecated use the safer methods {@link #libvlc_log_get_context(com.sun.jna.ptr.PointerByReference, java.lang.String[], java.lang.String[], java.nio.IntBuffer)} and {@link #libvlc_log_get_context(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.IntByReference)} instead
     */
    @Deprecated 
    void libvlc_log_get_context(Pointer ctx, PointerByReference module, PointerByReference file, IntByReference line);
    /**
     * Gets debugging information about a log message: the name of the VLC module<br>
     * emitting the message and the message location within the source code.<br>
     * The returned module name and file name will be NULL if unknown.<br>
     * The returned line number will similarly be zero if unknown.<br>
     * \param ctx message context (as passed to the @ref libvlc_log_cb callback)<br>
     * \param module module name storage (or NULL) [OUT]<br>
     * \param file source code file name storage (or NULL) [OUT]<br>
     * \param line source code file line number storage (or NULL) [OUT]<br>
     * \warning The returned module name and source code file name, if non-NULL,<br>
     * are only valid until the logging callback returns.<br>
     * \version LibVLC 2.1.0 or later<br>
     * Original signature : <code>void libvlc_log_get_context(const libvlc_log_t*, const char**, const char**, unsigned*)</code><br>
     * <i>native declaration : line 440</i>
     */
    void libvlc_log_get_context(PointerByReference ctx, String module[], String file[], IntBuffer line);
    /**
     * Gets debugging information about a log message: the name of the VLC module<br>
     * emitting the message and the message location within the source code.<br>
     * The returned module name and file name will be NULL if unknown.<br>
     * The returned line number will similarly be zero if unknown.<br>
     * \param ctx message context (as passed to the @ref libvlc_log_cb callback)<br>
     * \param module module name storage (or NULL) [OUT]<br>
     * \param file source code file name storage (or NULL) [OUT]<br>
     * \param line source code file line number storage (or NULL) [OUT]<br>
     * \warning The returned module name and source code file name, if non-NULL,<br>
     * are only valid until the logging callback returns.<br>
     * \version LibVLC 2.1.0 or later<br>
     * Original signature : <code>void libvlc_log_get_context(const libvlc_log_t*, const char**, const char**, unsigned*)</code><br>
     * <i>native declaration : line 440</i>
     */
    void libvlc_log_get_context(PointerByReference ctx, PointerByReference module, PointerByReference file, IntByReference line);
